The structure for working with the SCSS preprocessor has been built

--- a/index.html
+++ b/index.html
@@ -4,12 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
-    <title></title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Крус по фотографии</title>
   </head>
-
   <body class="page">
-    
+    <header class="header">
+      <img
+        src="./images/header__logoArrow.svg"
+        alt="логотип"
+        class="header__logoButton"
+      />
+      <ul class="header__list">
+        <li class="header__link">Композиция</li>
+        <li class="header__link">Камера</li>
+        <li class="header__link">Поиск заказов</li>
+      </ul>
+    </header>
+
+    <section class="fotoCourse">
+      <h1 class="fotoCourse__title">Курс по фотографии</h1>
+      <p class="fotoCourse__text">
+        Фотография в природных условиях, уроки по композиции и по пользованию
+        камерой.
+      </p>
+      <img
+        src="./images/лес-в-тумане.png"
+        alt="лес в тумане"
+        class="fotoCourse__foto"
+      />
+      <button class="fotoCourse__button">Подробнее</button>
+    </section>
+
+    <section class="studyComposition">
+      <p class="studyComposition__blockName">Композиция</p>
+      <h3 class="studyComposition__title">Изучите композицию</h3>
+      <p class="studyComposition__text">
+        Вы изучите гармоничное размещение всех элементов изображения на
+        <a href="#" class="studyComposition__text_link">снимке</a>.
+      </p>
+      <p class="studyComposition__text_2">
+        Изучите композицию интуитивную и какие-то определённые законы.
+      </p>
+      <img
+        src="./images/дорога-в-лесу.png"
+        alt="дорога в лесу"
+        class="studyComposition__foto"
+      />
+      <button class="studyComposition__button">Записаться!</button>
+      <ul class="studyComposition__rules">
+        <li class="studyComposition__compositionRule">
+          Првило третей, при котором нужно распологать объекты на пересечениях.
+        </li>
+        <li class="studyComposition__compositionRule">
+          Простота: убирай всё лишнее и кадрируй!
+        </li>
+        <li class="studyComposition__compositionRule">
+          Равновесие: уравновесь пятна объекта и фона.
+        </li>
+        <li class="studyComposition__compositionRule">
+          3D глубина кадра: расположи объект позади и перед другими предметами.
+        </li>
+      </ul>
+    </section>
+
     <main class=""></main>
 
     <footer></footer>
