Added mixins, variables have been created, blocks header, photo course, composition rules, camera for the desktop version have been executed.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
       </ul>
     </section>
 
+    <section class="camera">
+      <p class="camera__blockName">камера</p>
+      <h3 class="camera__title">Настройка Съемка Обработка</h3>
+      <p class="camera__text">отзывы про часть о камерах:</p>
+      <img src="./images/густой-зеленый-лес.png" alt="густой зеленый лес" class="camera__foto" />
+      <div class="camera__feedback">
+        <p class="camera__feedbackText"></p>
+      </div>
+    </section>
+
     <main class=""></main>
 
     <footer></footer>
