--- a/index.html
+++ b/index.html
@@ -15,71 +15,119 @@
         class="header__logoButton"
       />
       <ul class="header__list">
-        <li class="header__link">Композиция</li>
-        <li class="header__link">Камера</li>
-        <li class="header__link">Поиск заказов</li>
+        <li class="header__link"><a class="header__links" href="#studyComposition">Композиция</a></li>
+        <li class="header__link"><a class="header__links" href="#camera">Камера</a></li>
+        <li class="header__link"><a class="header__links" href="#searchingOrders">Поиск заказов</a></li>
       </ul>
     </header>
 
-    <section class="fotoCourse">
-      <h1 class="fotoCourse__title">Курс по фотографии</h1>
-      <p class="fotoCourse__text">
-        Фотография в природных условиях, уроки по композиции и по пользованию
-        камерой.
-      </p>
-      <img
-        src="./images/лес-в-тумане.png"
-        alt="лес в тумане"
-        class="fotoCourse__foto"
-      />
-      <button class="fotoCourse__button">Подробнее</button>
-    </section>
+    <main>
+      <section class="fotoCourse" id="fotoCourse">
+        <h1 class="fotoCourse__title">Курс по фотографии</h1>
+        <p class="fotoCourse__text">
+          Фотография в природных условиях, уроки по композиции и по пользованию
+          камерой.
+        </p>
+        <img
+          src="./images/лес-в-тумане.png"
+          alt="лес в тумане"
+          class="fotoCourse__foto"
+        />
+        <button class="fotoCourse__button">Подробнее</button>
+      </section>
 
-    <section class="studyComposition">
-      <p class="studyComposition__blockName">Композиция</p>
-      <h3 class="studyComposition__title">Изучите композицию</h3>
-      <p class="studyComposition__text">
-        Вы изучите гармоничное размещение всех элементов изображения на
-        <a href="#" class="studyComposition__text_link">снимке</a>.
-      </p>
-      <p class="studyComposition__text_2">
-        Изучите композицию интуитивную и какие-то определённые законы.
-      </p>
-      <img
-        src="./images/дорога-в-лесу.png"
-        alt="дорога в лесу"
-        class="studyComposition__foto"
-      />
-      <button class="studyComposition__button">Записаться!</button>
-      <ul class="studyComposition__rules">
-        <li class="studyComposition__compositionRule">
-          Првило третей, при котором нужно распологать объекты на пересечениях.
-        </li>
-        <li class="studyComposition__compositionRule">
-          Простота: убирай всё лишнее и кадрируй!
-        </li>
-        <li class="studyComposition__compositionRule">
-          Равновесие: уравновесь пятна объекта и фона.
-        </li>
-        <li class="studyComposition__compositionRule">
-          3D глубина кадра: расположи объект позади и перед другими предметами.
-        </li>
-      </ul>
-    </section>
+      <section class="studyComposition" id="studyComposition">
+        <p class="studyComposition__blockName">Композиция</p>
+        <h3 class="studyComposition__title">Изучите композицию</h3>
+        <p class="studyComposition__text">
+          Вы изучите гармоничное размещение всех элементов изображения на
+          <a href="#" class="studyComposition__text_link">снимке</a>.
+        </p>
+        <p class="studyComposition__text_2">
+          Изучите композицию интуитивную и какие-то определённые законы.
+        </p>
+        <img
+          src="./images/дорога-в-лесу.png"
+          alt="дорога в лесу"
+          class="studyComposition__foto"
+        />
+        <button class="studyComposition__button">Записаться!</button>
+        <ul class="studyComposition__rules">
+          <li class="studyComposition__compositionRule">
+            Првило третей, при котором нужно распологать объекты на
+            пересечениях.
+          </li>
+          <li class="studyComposition__compositionRule">
+            Простота: убирай всё лишнее и кадрируй!
+          </li>
+          <li class="studyComposition__compositionRule">
+            Равновесие: уравновесь пятна объекта и фона.
+          </li>
+          <li class="studyComposition__compositionRule">
+            3D глубина кадра: расположи объект позади и перед другими
+            предметами.
+          </li>
+        </ul>
+      </section>
 
-    <section class="camera">
-      <p class="camera__blockName">камера</p>
-      <h3 class="camera__title">Настройка Съемка Обработка</h3>
-      <p class="camera__text">отзывы про часть о камерах:</p>
-      <img src="./images/густой-зеленый-лес.png" alt="густой зеленый лес" class="camera__foto" />
-      <div class="camera__feedback">
-        <p class="camera__feedbackText"></p>
+      <section class="camera" id="camera">
+        <p class="camera__blockName">камера</p>
+        <h3 class="camera__title">Настройка Съемка Обработка</h3>
+        <p class="camera__text">отзывы про часть о камерах:</p>
+        <img
+          src="./images/густой-зеленый-лес.png"
+          alt="густой зеленый лес"
+          class="camera__foto"
+        />
+        <p class="camera__feedbackText camera__feedbackText_1">
+          на этом курсе я научился пользоватся камерой, как настоящий
+          профессионал!
+        </p>
+        <p class="camera__feedbackName camera__feedbackName_1">
+          Питер, водитель.
+        </p>
+        <p class="camera__feedbackMail camera__feedbackMail_1">@piter123</p>
+        <p class="camera__feedbackText camera__feedbackText_2">
+          супер крутой курс! <br />на части про фотики я стал разбираться в
+          предназначении кнопок
+        </p>
+        <p class="camera__feedbackName camera__feedbackName_2">
+          Джон, спортсмен.
+        </p>
+        <p class="camera__feedbackMail camera__feedbackMail_2">@john_sport</p>
+      </section>
+
+      <section class="searchingOrders" id="searchingOrders">
+        <p class="searchingOrders__blockName">поиск заказов</p>
+        <h3 class="searchingOrders__title">Научим находить заказы!</h3>
+        <img
+          src="./images/дерево-снизу-вверх.png"
+          alt="дерево снизу вверх"
+          class="searchingOrders__foto"
+        />
+        <p class="searchingOrders__text">
+          Мы научим вас искать заказы на всяких фриланс биржах, а когда вы
+          сделаете крутое портфолио, мы поможем найти постоянную работу.
+        </p>
+        <button class="searchingOrders__button">Записаться!</button>
+      </section>
+    </main>
+
+    <footer class="singUp">
+      <div class="singUp__callToAction">
+        <img
+          src="./images/arrowFooter.svg"
+          alt="стрелочка"
+          class="singUp__arrow"
+        />
+        <h2 class="singUp__h2">Записаться! Сейчас!</h2>
       </div>
-    </section>
-
-    <main class=""></main>
-
-    <footer></footer>
+      <div class="singUp__inputs">
+        <input name='' id="" value="Ваша почта" type="text" class="singUp__input">
+        <button class="singUp__button">Записаться!</button>
+      </div>
+      <p class="singUp__since">2021 Photo-lessons.</p>
+    </footer>
 
     <template> </template>
 
