modify 2 block for tablet version

--- a/index.html
+++ b/index.html
@@ -15,30 +15,41 @@
         class="header__logoButton"
       />
       <ul class="header__list">
-        <li class="header__link"><a class="header__links" href="#studyComposition">Композиция</a></li>
-        <li class="header__link"><a class="header__links" href="#camera">Камера</a></li>
-        <li class="header__link"><a class="header__links" href="#searchingOrders">Поиск заказов</a></li>
+        <li class="header__link">
+          <a class="header__links" href="#studyComposition">Композиция</a>
+        </li>
+        <li class="header__link">
+          <a class="header__links" href="#camera">Камера</a>
+        </li>
+        <li class="header__link">
+          <a class="header__links" href="#searchingOrders">Поиск заказов</a>
+        </li>
       </ul>
     </header>
 
     <main>
-      <section class="fotoCourse" id="fotoCourse">
+      <!-- <section class="fotoCourse" id="fotoCourse">
         <h1 class="fotoCourse__title">Курс по фотографии</h1>
-        <p class="fotoCourse__text">
-          Фотография в природных условиях, уроки по композиции и по пользованию
-          камерой.
-        </p>
         <img
           src="./images/лес-в-тумане.png"
           alt="лес в тумане"
           class="fotoCourse__foto"
         />
+        <p class="fotoCourse__text">
+          Фотография в природных условиях, уроки по композиции и по пользованию
+          камерой.
+        </p>
         <button class="fotoCourse__button">Подробнее</button>
-      </section>
+      </section> -->
 
       <section class="studyComposition" id="studyComposition">
         <p class="studyComposition__blockName">Композиция</p>
         <h3 class="studyComposition__title">Изучите композицию</h3>
+        <img
+          src="./images/дорога-в-лесу.png"
+          alt="дорога в лесу"
+          class="studyComposition__foto"
+        />
         <p class="studyComposition__text">
           Вы изучите гармоничное размещение всех элементов изображения на
           <a href="#" class="studyComposition__text_link">снимке</a>.
@@ -46,11 +57,6 @@
         <p class="studyComposition__text_2">
           Изучите композицию интуитивную и какие-то определённые законы.
         </p>
-        <img
-          src="./images/дорога-в-лесу.png"
-          alt="дорога в лесу"
-          class="studyComposition__foto"
-        />
         <button class="studyComposition__button">Записаться!</button>
         <ul class="studyComposition__rules">
           <li class="studyComposition__compositionRule">
@@ -70,7 +76,7 @@
         </ul>
       </section>
 
-      <section class="camera" id="camera">
+      <!-- <section class="camera" id="camera">
         <p class="camera__blockName">камера</p>
         <h3 class="camera__title">Настройка Съемка Обработка</h3>
         <p class="camera__text">отзывы про часть о камерах:</p>
@@ -123,13 +129,19 @@
         <h2 class="singUp__h2">Записаться! Сейчас!</h2>
       </div>
       <div class="singUp__inputs">
-        <input name='' id="" value="Ваша почта" type="text" class="singUp__input">
+        <input
+          name=""
+          id=""
+          value="Ваша почта"
+          type="text"
+          class="singUp__input"
+        />
         <button class="singUp__button">Записаться!</button>
       </div>
       <p class="singUp__since">2021 Photo-lessons.</p>
     </footer>
 
-    <template> </template>
+    <template> </template> -->
 
     <script src="./pages/index.js"></script>
   </body>
