all sections adaptive to tablet size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-      <!-- <section class="fotoCourse" id="fotoCourse">
+      <section class="fotoCourse" id="fotoCourse">
         <h1 class="fotoCourse__title">Курс по фотографии</h1>
         <img
           src="./images/лес-в-тумане.png"
@@ -40,7 +40,7 @@
           камерой.
         </p>
         <button class="fotoCourse__button">Подробнее</button>
-      </section> -->
+      </section>
 
       <section class="studyComposition" id="studyComposition">
         <p class="studyComposition__blockName">Композиция</p>
@@ -76,15 +76,15 @@
         </ul>
       </section>
 
-      <!-- <section class="camera" id="camera">
+      <section class="camera" id="camera">
         <p class="camera__blockName">камера</p>
         <h3 class="camera__title">Настройка Съемка Обработка</h3>
-        <p class="camera__text">отзывы про часть о камерах:</p>
         <img
           src="./images/густой-зеленый-лес.png"
           alt="густой зеленый лес"
           class="camera__foto"
         />
+        <p class="camera__text">отзывы про часть о камерах:</p>
         <p class="camera__feedbackText camera__feedbackText_1">
           на этом курсе я научился пользоватся камерой, как настоящий
           профессионал!
@@ -141,7 +141,7 @@
       <p class="singUp__since">2021 Photo-lessons.</p>
     </footer>
 
-    <template> </template> -->
+    <template> </template>
 
     <script src="./pages/index.js"></script>
   </body>
