final correction for tablet size

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         alt="логотип"
         class="header__logoButton"
       />
+      <img src="./images/buttonBurgerMenu.svg" alt="button" class="header__buttonBurgerMenu">
       <ul class="header__list">
         <li class="header__link">
           <a class="header__links" href="#studyComposition">Композиция</a>
