added mobile styles for 1st block

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           type="text"
           class="singUp__input"
         />
-        <button class="singUp__button">Записаться!</button>
+        <button class="singUp__button" id="singUpButton">Записаться!</button>
       </div>
       <p class="singUp__since">2021 Photo-lessons.</p>
     </footer>
