--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <button class="studyComposition__button">Записаться!</button>
         <ul class="studyComposition__rules">
           <li class="studyComposition__compositionRule">
-            Првило третей, при котором нужно распологать объекты на
+            Правило третей, при котором нужно распологать объекты на
             пересечениях.
           </li>
           <li class="studyComposition__compositionRule">
@@ -150,7 +150,7 @@
           type="text"
           class="singUp__input"
         />
-        <button class="singUp__button">Записаться!</button>
+        <button class="singUp__button" id="singUpButton">Записаться!</button>
       </div>
       <p class="singUp__since">2021 Photo-lessons.</p>
     </footer>
