fixed bugs in names

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>Крус по фотографии</title>
   </head>
   <body class="page">
-    <header class="header">
-      <a href="#fotoCourse" class="header__logoButtonLink">
+    <!-- <header class="header">
+      <a href="#fotoCourse" class="header__logo-button-link">
         <img
           src="./images/header__logoArrow.svg"
           alt="логотип"
-          class="header__logoButton"
+          class="header__logo-button"
         />
       </a>
       <img
-        id="burgerMenuButton"
-        src="./images/buttonBurgerMenu.svg"
+        id="burger-menu-button"
+        src="./images/button-burger-menu.svg"
         alt="button"
-        class="header__buttonBurgerMenu"
+        class="header__button-burger-menu"
       />
       <ul class="header__list">
         <li class="header__link">
@@ -30,22 +30,22 @@
           <a class="header__links" href="#camera">Камера</a>
         </li>
         <li class="header__link">
-          <a class="header__links" href="#searchingOrders">Поиск заказов</a>
+          <a class="header__links" href="#searching-orders">Поиск заказов</a>
         </li>
       </ul>
       <img
-        id="colseIconHeader"
+        id="colse-iconHeader"
         src="./images/closeIcon.svg"
         alt="Закрыть"
-        class="header__closeIcon"
+        class="header__close-icon"
       />
-    </header>
+    </header> -->
 
     <main>
       <section class="fotoCourse" id="fotoCourse">
         <h1 class="fotoCourse__title">Курс по фотографии</h1>
         <img
-          src="./images/лес-в-тумане.png"
+          src="./images/forest-in-a-fog.png"
           alt="лес в тумане"
           class="fotoCourse__foto"
         />
@@ -56,103 +56,103 @@
         <button class="fotoCourse__button">Подробнее</button>
       </section>
 
-      <section class="studyComposition" id="studyComposition">
-        <p class="studyComposition__blockName">Композиция</p>
-        <h3 class="studyComposition__title">Изучите композицию</h3>
+      <!-- <section class="study-composition" id="studyComposition">
+        <p class="study-composition__block-name">Композиция</p>
+        <h3 class="study-composition__title">Изучите композицию</h3>
         <img
-          src="./images/дорога-в-лесу.png"
+          src="./images/road-in-a-forest.png"
           alt="дорога в лесу"
-          class="studyComposition__foto"
+          class="study-composition__foto"
         />
-        <p class="studyComposition__text">
+        <p class="study-composition__text">
           Вы изучите гармоничное размещение всех элементов изображения на
-          <a href="#" class="studyComposition__text_link">снимке</a>.
+          <a href="#" class="study-composition__text_link">снимке</a>.
         </p>
-        <p class="studyComposition__text_2">
+        <p class="study-composition__text_two">
           Изучите композицию интуитивную и какие-то определённые законы.
         </p>
-        <button class="studyComposition__button">Записаться!</button>
-        <ul class="studyComposition__rules">
-          <li class="studyComposition__compositionRule">
+        <button class="study-composition__button">Записаться!</button>
+        <ul class="study-composition__rules">
+          <li class="study-composition__composition-rule">
             Правило третей, при котором нужно распологать объекты на
             пересечениях.
           </li>
-          <li class="studyComposition__compositionRule">
+          <li class="study-composition__composition-rule">
             Простота: убирай всё лишнее и кадрируй!
           </li>
-          <li class="studyComposition__compositionRule">
+          <li class="study-composition__composition-rule">
             Равновесие: уравновесь пятна объекта и фона.
           </li>
-          <li class="studyComposition__compositionRule">
+          <li class="study-composition__composition-rule">
             3D глубина кадра: расположи объект позади и перед другими
             предметами.
           </li>
         </ul>
-      </section>
+      </section> -->
 
-      <section class="camera" id="camera">
-        <p class="camera__blockName">камера</p>
+      <!-- <section class="camera" id="camera">
+        <p class="camera__block-name">камера</p>
         <h3 class="camera__title">Настройка Съемка Обработка</h3>
         <img
-          src="./images/густой-зеленый-лес.png"
+          src="./images/green-forest.png"
           alt="густой зеленый лес"
           class="camera__foto"
         />
         <p class="camera__text">отзывы про часть о камерах:</p>
-        <p class="camera__feedbackText camera__feedbackText_1">
+        <p class="camera__feedback-text camera__feedback-text_one">
           на этом курсе я научился пользоватся камерой, как настоящий
           профессионал!
         </p>
-        <p class="camera__feedbackName camera__feedbackName_1">
+        <p class="camera__feedback-name camera__feedback-name_one">
           Питер, водитель.
         </p>
-        <p class="camera__feedbackMail camera__feedbackMail_1">@piter123</p>
-        <p class="camera__feedbackText camera__feedbackText_2">
+        <p class="camera__feedback-mail camera__feedback-mail_one">@piter123</p>
+        <p class="camera__feedback-text camera__feedback-text_two">
           супер крутой курс! <br />на части про фотики я стал разбираться в
           предназначении кнопок
         </p>
-        <p class="camera__feedbackName camera__feedbackName_2">
+        <p class="camera__feedback-name camera__feedback-name_two">
           Джон, спортсмен.
         </p>
-        <p class="camera__feedbackMail camera__feedbackMail_2">@john_sport</p>
-      </section>
+        <p class="camera__feedback-mail camera__feedback-mail_two">@john_sport</p>
+      </section> -->
 
-      <section class="searchingOrders" id="searchingOrders">
-        <p class="searchingOrders__blockName">поиск заказов</p>
-        <h3 class="searchingOrders__title">Научим находить заказы!</h3>
+      <!-- <section class="searching-orders" id="searching-orders">
+        <p class="searching-orders__block-name">поиск заказов</p>
+        <h3 class="searching-orders__title">Научим находить заказы!</h3>
         <img
-          src="./images/дерево-снизу-вверх.png"
+          src="./images/tree-dow-up.png"
           alt="дерево снизу вверх"
-          class="searchingOrders__foto"
+          class="searching-orders__foto"
         />
-        <p class="searchingOrders__text">
+        <p class="searching-orders__text">
           Мы научим вас искать заказы на всяких фриланс биржах, а когда вы
           сделаете крутое портфолио, мы поможем найти постоянную работу.
         </p>
-        <button class="searchingOrders__button">Записаться!</button>
+        <button class="searching-orders__button">Записаться!</button>
       </section>
-    </main>
+    </main> -->
 
-    <footer class="singUp">
-      <div class="singUp__callToAction">
+    <footer class="sing-up">
+      <div class="sing-up__call-to-action">
         <img
           src="./images/arrowFooter.svg"
           alt="стрелочка"
-          class="singUp__arrow"
+          class="sing-up__arrow"
         />
-        <h2 class="singUp__h2">Записаться! Сейчас!</h2>
+        <h2 class="sing-up__title">Записаться! Сейчас!</h2>
       </div>
-      <div class="singUp__inputs">
+      <div class="sing-up__inputs">
         <input
-          name="singUpInput"
+          name="sing-upInput"
           id="singUpInput"
           value="Ваша почта"
           type="text"
-          class="singUp__input"
+          class="sing-up__input"
         />
-        <button class="singUp__button" id="singUpButton">Записаться!</button>
+        <button class="sing-up__button" id="sing-upButton">Записаться!</button>
       </div>
-      <p class="singUp__since">2021 Photo-lessons.</p>
+      <p class="sing-up__since">2021 Photo-lessons.</p>
     </footer>
 
     <template> </template>
