--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <title>Крус по фотографии</title>
   </head>
   <body class="page">
-    <!-- <header class="header">
-      <a href="#fotoCourse" class="header__logo-button-link">
+    <header class="header">
+      <a href="#foto-course" class="header__logo-button-link">
         <img
-          src="./images/header__logoArrow.svg"
+          src="./images/header__logo-arrow.svg"
           alt="логотип"
-          class="header__logo-button"
+          class="header__logo-button animation-logo"
         />
       </a>
       <img
         id="burger-menu-button"
         src="./images/button-burger-menu.svg"
-        alt="button"
+        alt="меню"
         class="header__button-burger-menu"
+        type="button"
       />
       <ul class="header__list">
         <li class="header__link">
-          <a class="header__links" href="#studyComposition">Композиция</a>
+          <a class="header__links" href="#study-composition">Композиция</a>
         </li>
         <li class="header__link">
           <a class="header__links" href="#camera">Камера</a>
@@ -34,29 +35,29 @@
         </li>
       </ul>
       <img
-        id="colse-iconHeader"
-        src="./images/closeIcon.svg"
+        id="colse-icon-header"
+        src="./images/close-icon.svg"
         alt="Закрыть"
         class="header__close-icon"
       />
-    </header> -->
+    </header>
 
     <main>
-      <section class="fotoCourse" id="fotoCourse">
-        <h1 class="fotoCourse__title">Курс по фотографии</h1>
+      <section class="foto-course" id="foto-course">
+        <h1 class="foto-course__title">Курс по фотографии</h1>
         <img
           src="./images/forest-in-a-fog.png"
           alt="лес в тумане"
-          class="fotoCourse__foto"
+          class="foto-course__foto"
         />
-        <p class="fotoCourse__text">
+        <p class="foto-course__text">
           Фотография в природных условиях, уроки по композиции и по пользованию
           камерой.
         </p>
-        <button class="fotoCourse__button">Подробнее</button>
+        <button class="foto-course__button" type="button">Подробнее</button>
       </section>
 
-      <!-- <section class="study-composition" id="studyComposition">
+      <section class="study-composition" id="study-composition">
         <p class="study-composition__block-name">Композиция</p>
         <h3 class="study-composition__title">Изучите композицию</h3>
         <img
@@ -71,7 +72,7 @@
         <p class="study-composition__text_two">
           Изучите композицию интуитивную и какие-то определённые законы.
         </p>
-        <button class="study-composition__button">Записаться!</button>
+        <button class="study-composition__button" type="button">Записаться!</button>
         <ul class="study-composition__rules">
           <li class="study-composition__composition-rule">
             Правило третей, при котором нужно распологать объекты на
@@ -88,9 +89,9 @@
             предметами.
           </li>
         </ul>
-      </section> -->
+      </section>
 
-      <!-- <section class="camera" id="camera">
+      <section class="camera" id="camera">
         <p class="camera__block-name">камера</p>
         <h3 class="camera__title">Настройка Съемка Обработка</h3>
         <img
@@ -115,9 +116,9 @@
           Джон, спортсмен.
         </p>
         <p class="camera__feedback-mail camera__feedback-mail_two">@john_sport</p>
-      </section> -->
+      </section>
 
-      <!-- <section class="searching-orders" id="searching-orders">
+      <section class="searching-orders" id="searching-orders">
         <p class="searching-orders__block-name">поиск заказов</p>
         <h3 class="searching-orders__title">Научим находить заказы!</h3>
         <img
@@ -129,29 +130,22 @@
           Мы научим вас искать заказы на всяких фриланс биржах, а когда вы
           сделаете крутое портфолио, мы поможем найти постоянную работу.
         </p>
-        <button class="searching-orders__button">Записаться!</button>
+        <button class="searching-orders__button" type="button">Записаться!</button>
       </section>
-    </main> -->
+    </main>
 
     <footer class="sing-up">
-      <div class="sing-up__call-to-action">
-        <img
-          src="./images/arrowFooter.svg"
-          alt="стрелочка"
-          class="sing-up__arrow"
-        />
-        <h2 class="sing-up__title">Записаться! Сейчас!</h2>
-      </div>
-      <div class="sing-up__inputs">
+      <h2 class="sing-up__title">Записаться! Сейчас!</h2>
+      <form class="sing-up__inputs" name="sing-up-inputs">
         <input
-          name="sing-upInput"
-          id="singUpInput"
+          name="sing-up-input"
+          id="sing-up-input"
           value="Ваша почта"
           type="text"
           class="sing-up__input"
         />
-        <button class="sing-up__button" id="sing-upButton">Записаться!</button>
-      </div>
+        <button class="sing-up__button" id="sing-up-button" type="submit">Записаться!</button>
+      </form>
       <p class="sing-up__since">2021 Photo-lessons.</p>
     </footer>
 
