arrow added by ::before

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <p class="study-composition__text_two">
           Изучите композицию интуитивную и какие-то определённые законы.
         </p>
-        <button class="study-composition__button" type="button">Записаться!</button>
+        <button class="study-composition__button" type="button">
+          Записаться!
+        </button>
         <ul class="study-composition__rules">
           <li class="study-composition__composition-rule">
             Правило третей, при котором нужно распологать объекты на
@@ -115,7 +117,9 @@
         <p class="camera__feedback-name camera__feedback-name_two">
           Джон, спортсмен.
         </p>
-        <p class="camera__feedback-mail camera__feedback-mail_two">@john_sport</p>
+        <p class="camera__feedback-mail camera__feedback-mail_two">
+          @john_sport
+        </p>
       </section>
 
       <section class="searching-orders" id="searching-orders">
@@ -130,7 +134,9 @@
           Мы научим вас искать заказы на всяких фриланс биржах, а когда вы
           сделаете крутое портфолио, мы поможем найти постоянную работу.
         </p>
-        <button class="searching-orders__button" type="button">Записаться!</button>
+        <button class="searching-orders__button" type="button">
+          Записаться!
+        </button>
       </section>
     </main>
 
@@ -144,7 +150,9 @@
           type="text"
           class="sing-up__input"
         />
-        <button class="sing-up__button" id="sing-up-button" type="submit">Записаться!</button>
+        <button class="sing-up__button" id="sing-up-button" type="submit">
+          Записаться!
+        </button>
       </form>
       <p class="sing-up__since">2021 Photo-lessons.</p>
     </footer>
